src/app/attractions/attractions.component.css
.btn{
    border: none;
    border-radius: 20px;
    color: #001a33;
    text-transform: uppercase;
    padding-bottom: 15px;
    position: relative;
    background-color: #ffffff;
    margin-right: 150px;
    width: 100%;
    font-weight: 600;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}
  
.btn img{
    width: 60px;
    height: 60px;
}
  
.btn:hover{
    color: #001A33;
}

.btn:after{
    content: "";
    width: 0;
    height: 10px;
    position: absolute;
    bottom: 0;
    left: 0;
    border-radius: 0 0 20px 20px;
    transition: all 0.35s ease 0s;
}

.btn:hover:after{
    width: 100%;
}

.btn.blue:after{
    background: #001a33;
}

.text-center{
    text-shadow: 5px 6px 4px rgba(0, 0, 0, 0.1);
    color: #001a33;
}

.col{
    background-image: url('https://e0.pxfuel.com/wallpapers/914/810/desktop-wallpaper-pastel-blue-purple-mint-ombre-gradient-phone-phone-pastel-blue-gradient.jpg');
    flex: 33.33%;
    padding: 35px;
    margin: 30px;
    margin-bottom: 3em;
    border-radius: 35px;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
    color: #001A33;
}

.col img{
    width: 520px;
    height: 500px;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    border-radius: 35px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.column-link{
    text-decoration: none;
    color:#001A33;
}

.load{
    color: #001A33;
    cursor: pointer;
}

.load:hover{
    text-decoration: underline;
}

.mt-4 {
    width: 500px;
    padding: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.dropdown-filter {
    position: relative;
    display: flex;
    justify-content: flex-end; 
    margin-right: 130px;
}
  
.filter-toggle {
    padding: 5px 10px;
    background-color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    color: #001A33;
}
  
.filter-menu {
    display: none;
    position: absolute;
    top: 100%;
    right: 0; 
    padding: 10px;
    background-color: white;
    border-radius: 4px;
    color: #001A33;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
}
  
.filter-menu.open {
    display: block;
}

.fa{
    background-color: white;
    color: #001A33;
    border: none;
    border-radius: 20px;
    font-size: 20px;
    padding: 10px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.checkbox-group {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
}
  
.checkbox-group label {
    margin-right: 10px;
}
  
@media screen and (max-width: 767px){
    .btn{
        margin-bottom: 20px;
    }

    .col{
        width: 350px;
        margin: 20px
    }

    .col img{
        width: 290px;
        height: auto;
    }

    .head{
        font-size: 40px;
    }

    .load{
        padding-left: 30px;
    }

    .mt-4 {
        width: 290px;
    }

    .dropdown-filter{
        margin-right: 30px;
    }
}

